Prevent vertical scrollbar on zoom lvl 0

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@
 
 #board-container {
     padding: 8px;
-    overflow: scroll;
+    overflow: auto;
     height: 100%;
     width: calc(100vw - var(--zoom-btns-width) - var(--side-bar-width));
 }
